--- a/public/index.html
+++ b/public/index.html
@@ -27,6 +27,8 @@
     <title>React App</title>
   </head>
   <body>
+    <body style="background-color: #b1b0b0;">
+
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
     <!--
