--- a/public/index.html
+++ b/public/index.html
@@ -24,10 +24,14 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
+    <link href="https://fonts.googleapis.com/css2?family=Roboto+Slab:wght@600&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Roboto+Slab:wght@600&family=Yanone+Kaffeesatz:wght@700&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <title>React App</title>
   </head>
   <body>
-    <body style="background-color: #b1b0b0;">
+    <body style="background-color: #ffffff;"></body>
 
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
